# libmodbus-for-android

./: .gitignore  README.md  build-android.sh  build-common.sh
cmake/: CMakeLists.txt  android.toolchain.cmake
header/: config.h  modbus-version.h
